--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -473,7 +473,7 @@
      </rect>
     </property>
     <property name="inputMask">
-     <string>#0\.00</string>
+     <string>##0\.00</string>
     </property>
     <property name="text">
      <string>0.0</string>
@@ -495,7 +495,7 @@
      </rect>
     </property>
     <property name="inputMask">
-     <string>#0\.00</string>
+     <string>##0\.00</string>
     </property>
     <property name="text">
      <string>0.0</string>
@@ -517,7 +517,7 @@
      </rect>
     </property>
     <property name="inputMask">
-     <string>#0\.00</string>
+     <string>##0\.00</string>
     </property>
     <property name="text">
      <string>0.0</string>
