--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -970,7 +970,7 @@
      <rect>
       <x>670</x>
       <y>467</y>
-      <width>121</width>
+      <width>181</width>
       <height>24</height>
      </rect>
     </property>
@@ -990,6 +990,63 @@
       <string>Sprite Sheet</string>
      </property>
     </item>
+   </widget>
+   <widget class="QWidget" name="spriteSheetWidget" native="true">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>859</x>
+      <y>467</y>
+      <width>81</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <widget class="QLineEdit" name="spriteSheetColumns">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>41</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="inputMask">
+      <string>#0\.00</string>
+     </property>
+     <property name="text">
+      <string>1.0</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="placeholderText">
+      <string>0.0</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="spriteSheetRows">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>0</y>
+       <width>41</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="inputMask">
+      <string>#0\.00</string>
+     </property>
+     <property name="text">
+      <string>1.0</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="placeholderText">
+      <string>0.0</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
