--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -204,8 +204,8 @@
    <widget class="QLabel" name="label_MaxParticles">
     <property name="geometry">
      <rect>
-      <x>856</x>
-      <y>191</y>
+      <x>690</x>
+      <y>350</y>
       <width>70</width>
       <height>16</height>
      </rect>
@@ -285,7 +285,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Color Start</string>
+     <string>Change</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="colorInDisplay">
@@ -312,7 +312,7 @@
      <enum>Qt::NoContextMenu</enum>
     </property>
     <property name="text">
-     <string/>
+     <string>Start Color</string>
     </property>
     <property name="frame">
      <bool>false</bool>
@@ -354,7 +354,7 @@
      <enum>Qt::NoContextMenu</enum>
     </property>
     <property name="text">
-     <string/>
+     <string>End Color</string>
     </property>
     <property name="frame">
      <bool>false</bool>
@@ -382,67 +382,20 @@
      </rect>
     </property>
     <property name="text">
-     <string>Color End</string>
+     <string>Change</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="scaleBox">
+   <widget class="QLabel" name="label_StartSize">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>260</y>
-      <width>121</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
-    </property>
-    <property name="currentText">
-     <string>Don't Scale</string>
-    </property>
-    <item>
-     <property name="text">
-      <string>Don't Scale</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Scale In</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Scale Out</string>
-     </property>
-    </item>
-   </widget>
-   <widget class="QLabel" name="label_SizeY">
-    <property name="geometry">
-     <rect>
-      <x>771</x>
+      <x>661</x>
       <y>191</y>
-      <width>60</width>
+      <width>91</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Size Y</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_SizeX">
-    <property name="geometry">
-     <rect>
-      <x>681</x>
-      <y>191</y>
-      <width>60</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Size X</string>
+     <string>Start Size</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -474,7 +427,7 @@
      </property>
     </item>
    </widget>
-   <widget class="QLabel" name="label_SizeY_2">
+   <widget class="QLabel" name="label_EmitterType">
     <property name="geometry">
      <rect>
       <x>830</x>
@@ -485,22 +438,6 @@
     </property>
     <property name="text">
      <string>Emitter Type</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_SizeY_3">
-    <property name="geometry">
-     <rect>
-      <x>680</x>
-      <y>240</y>
-      <width>110</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Scale Mode</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -681,7 +618,7 @@
      <rect>
       <x>670</x>
       <y>210</y>
-      <width>90</width>
+      <width>35</width>
       <height>20</height>
      </rect>
     </property>
@@ -701,9 +638,9 @@
    <widget class="QLineEdit" name="sizeY">
     <property name="geometry">
      <rect>
-      <x>760</x>
+      <x>707</x>
       <y>210</y>
-      <width>90</width>
+      <width>35</width>
       <height>20</height>
      </rect>
     </property>
@@ -723,9 +660,9 @@
    <widget class="QLineEdit" name="maxParticles">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>210</y>
-      <width>90</width>
+      <x>690</x>
+      <y>369</y>
+      <width>45</width>
       <height>20</height>
      </rect>
     </property>
@@ -911,6 +848,66 @@
      </property>
     </widget>
    </widget>
+   <widget class="QLineEdit" name="sizeY_2">
+    <property name="geometry">
+     <rect>
+      <x>797</x>
+      <y>210</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="inputMask">
+     <string>#0\.00</string>
+    </property>
+    <property name="text">
+     <string>1.0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="placeholderText">
+     <string>1.0</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_EndSize">
+    <property name="geometry">
+     <rect>
+      <x>751</x>
+      <y>191</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>End Size</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="sizeX_2">
+    <property name="geometry">
+     <rect>
+      <x>760</x>
+      <y>210</y>
+      <width>35</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="inputMask">
+     <string>#0\.00</string>
+    </property>
+    <property name="text">
+     <string>1.0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="placeholderText">
+     <string>1.0</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -1028,22 +1025,6 @@
     <hint type="sourcelabel">
      <x>694</x>
      <y>97</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>474</x>
-     <y>332</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>scaleBox</sender>
-   <signal>currentIndexChanged(int)</signal>
-   <receiver>maincontainer</receiver>
-   <slot>scaleModeChanged(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>710</x>
-     <y>254</y>
     </hint>
     <hint type="destinationlabel">
      <x>474</x>
