--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -73,7 +73,7 @@
       <x>10</x>
       <y>500</y>
       <width>361</width>
-      <height>71</height>
+      <height>91</height>
      </rect>
     </property>
     <property name="font">
@@ -204,8 +204,8 @@
    <widget class="QLabel" name="label_MaxParticles">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>350</y>
+      <x>860</x>
+      <y>191</y>
       <width>70</width>
       <height>16</height>
      </rect>
@@ -660,8 +660,8 @@
    <widget class="QLineEdit" name="maxParticles">
     <property name="geometry">
      <rect>
-      <x>690</x>
-      <y>369</y>
+      <x>870</x>
+      <y>210</y>
       <width>45</width>
       <height>20</height>
      </rect>
@@ -803,7 +803,7 @@
       <height>24</height>
      </rect>
     </property>
-    <widget class="QLineEdit" name="spriteSheetColumns">
+    <widget class="QLineEdit" name="spriteColumns">
      <property name="geometry">
       <rect>
        <x>0</x>
@@ -813,10 +813,10 @@
       </rect>
      </property>
      <property name="inputMask">
-      <string>#9</string>
+      <string>90</string>
      </property>
      <property name="text">
-      <string>1</string>
+      <string>4</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -825,7 +825,7 @@
       <string>0.0</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="spriteSheetRows">
+    <widget class="QLineEdit" name="spriteRows">
      <property name="geometry">
       <rect>
        <x>40</x>
@@ -835,10 +835,10 @@
       </rect>
      </property>
      <property name="inputMask">
-      <string>#9</string>
+      <string>90</string>
      </property>
      <property name="text">
-      <string>1</string>
+      <string>4</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -908,6 +908,22 @@
      <string>1.0</string>
     </property>
    </widget>
+   <widget class="QLabel" name="textureView">
+    <property name="geometry">
+     <rect>
+      <x>870</x>
+      <y>470</y>
+      <width>64</width>
+      <height>64</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -963,6 +979,7 @@
     <slot>textureTypeChanged(int)</slot>
     <slot>endSizeX()</slot>
     <slot>endSizeY()</slot>
+    <slot>setColumnsRows()</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -1283,6 +1300,38 @@
     <hint type="sourcelabel">
      <x>804</x>
      <y>252</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>spriteColumns</sender>
+   <signal>editingFinished()</signal>
+   <receiver>maincontainer</receiver>
+   <slot>setColumnsRows()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>790</x>
+     <y>511</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>spriteRows</sender>
+   <signal>editingFinished()</signal>
+   <receiver>maincontainer</receiver>
+   <slot>setColumnsRows()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>830</x>
+     <y>511</y>
     </hint>
     <hint type="destinationlabel">
      <x>474</x>
