--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -924,6 +924,38 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QSlider" name="emissionDelaySlider">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>530</y>
+      <width>91</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>100</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_EmDelaySlide">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>510</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
@@ -980,6 +1012,7 @@
     <slot>endSizeX()</slot>
     <slot>endSizeY()</slot>
     <slot>setColumnsRows()</slot>
+    <slot>emissionDelaySlide(int)</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -1332,6 +1365,22 @@
     <hint type="sourcelabel">
      <x>830</x>
      <y>511</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>474</x>
+     <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>emissionDelaySlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>maincontainer</receiver>
+   <slot>emissionDelaySlide(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>545</x>
+     <y>573</y>
     </hint>
     <hint type="destinationlabel">
      <x>474</x>
