--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -150,7 +150,7 @@
     <property name="geometry">
      <rect>
       <x>670</x>
-      <y>439</y>
+      <y>409</y>
       <width>91</width>
       <height>25</height>
      </rect>
@@ -163,7 +163,7 @@
     <property name="geometry">
      <rect>
       <x>780</x>
-      <y>138</y>
+      <y>264</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -179,7 +179,7 @@
     <property name="geometry">
      <rect>
       <x>680</x>
-      <y>87</y>
+      <y>103</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -195,7 +195,7 @@
     <property name="geometry">
      <rect>
       <x>854</x>
-      <y>138</y>
+      <y>264</y>
       <width>80</width>
       <height>20</height>
      </rect>
@@ -211,7 +211,7 @@
     <property name="geometry">
      <rect>
       <x>860</x>
-      <y>191</y>
+      <y>317</y>
       <width>70</width>
       <height>16</height>
      </rect>
@@ -227,7 +227,7 @@
     <property name="geometry">
      <rect>
       <x>770</x>
-      <y>440</y>
+      <y>410</y>
       <width>171</width>
       <height>23</height>
      </rect>
@@ -243,7 +243,7 @@
     <property name="geometry">
      <rect>
       <x>830</x>
-      <y>550</y>
+      <y>530</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -256,7 +256,7 @@
     <property name="geometry">
      <rect>
       <x>689</x>
-      <y>138</y>
+      <y>264</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -272,7 +272,7 @@
     <property name="geometry">
      <rect>
       <x>680</x>
-      <y>420</y>
+      <y>390</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -395,7 +395,7 @@
     <property name="geometry">
      <rect>
       <x>661</x>
-      <y>191</y>
+      <y>317</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -410,8 +410,8 @@
    <widget class="QComboBox" name="emitterTypeBox">
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>260</y>
+      <x>990</x>
+      <y>286</y>
       <width>121</width>
       <height>24</height>
      </rect>
@@ -436,8 +436,8 @@
    <widget class="QLabel" name="label_EmitterType">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>240</y>
+      <x>1000</x>
+      <y>266</y>
       <width>100</width>
       <height>16</height>
      </rect>
@@ -453,7 +453,7 @@
     <property name="geometry">
      <rect>
       <x>670</x>
-      <y>110</y>
+      <y>126</y>
       <width>90</width>
       <height>20</height>
      </rect>
@@ -474,8 +474,8 @@
    <widget class="QLineEdit" name="velocityY">
     <property name="geometry">
      <rect>
-      <x>760</x>
-      <y>110</y>
+      <x>670</x>
+      <y>173</y>
       <width>90</width>
       <height>20</height>
      </rect>
@@ -496,8 +496,8 @@
    <widget class="QLineEdit" name="velocityZ">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>110</y>
+      <x>670</x>
+      <y>223</y>
       <width>90</width>
       <height>20</height>
      </rect>
@@ -519,7 +519,7 @@
     <property name="geometry">
      <rect>
       <x>670</x>
-      <y>160</y>
+      <y>286</y>
       <width>90</width>
       <height>20</height>
      </rect>
@@ -541,7 +541,7 @@
     <property name="geometry">
      <rect>
       <x>760</x>
-      <y>160</y>
+      <y>286</y>
       <width>90</width>
       <height>20</height>
      </rect>
@@ -562,8 +562,8 @@
    <widget class="QLabel" name="label_VelocityY">
     <property name="geometry">
      <rect>
-      <x>770</x>
-      <y>87</y>
+      <x>680</x>
+      <y>150</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -581,8 +581,8 @@
    <widget class="QLabel" name="label_VelocityZ">
     <property name="geometry">
      <rect>
-      <x>859</x>
-      <y>87</y>
+      <x>680</x>
+      <y>200</y>
       <width>71</width>
       <height>20</height>
      </rect>
@@ -601,7 +601,7 @@
     <property name="geometry">
      <rect>
       <x>670</x>
-      <y>210</y>
+      <y>336</y>
       <width>35</width>
       <height>20</height>
      </rect>
@@ -623,7 +623,7 @@
     <property name="geometry">
      <rect>
       <x>707</x>
-      <y>210</y>
+      <y>336</y>
       <width>35</width>
       <height>20</height>
      </rect>
@@ -645,7 +645,7 @@
     <property name="geometry">
      <rect>
       <x>870</x>
-      <y>210</y>
+      <y>336</y>
       <width>45</width>
       <height>20</height>
      </rect>
@@ -669,8 +669,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>300</y>
+      <x>990</x>
+      <y>326</y>
       <width>120</width>
       <height>110</height>
      </rect>
@@ -740,7 +740,7 @@
     <property name="geometry">
      <rect>
       <x>711</x>
-      <y>550</y>
+      <y>530</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -753,7 +753,7 @@
     <property name="geometry">
      <rect>
       <x>670</x>
-      <y>467</y>
+      <y>437</y>
       <width>91</width>
       <height>24</height>
      </rect>
@@ -782,7 +782,7 @@
     <property name="geometry">
      <rect>
       <x>770</x>
-      <y>467</y>
+      <y>437</y>
       <width>81</width>
       <height>24</height>
      </rect>
@@ -836,7 +836,7 @@
     <property name="geometry">
      <rect>
       <x>787</x>
-      <y>210</y>
+      <y>336</y>
       <width>35</width>
       <height>20</height>
      </rect>
@@ -858,7 +858,7 @@
     <property name="geometry">
      <rect>
       <x>741</x>
-      <y>191</y>
+      <y>317</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -874,7 +874,7 @@
     <property name="geometry">
      <rect>
       <x>750</x>
-      <y>210</y>
+      <y>336</y>
       <width>35</width>
       <height>20</height>
      </rect>
@@ -896,7 +896,7 @@
     <property name="geometry">
      <rect>
       <x>870</x>
-      <y>470</y>
+      <y>450</y>
       <width>64</width>
       <height>64</height>
      </rect>
@@ -912,7 +912,7 @@
     <property name="geometry">
      <rect>
       <x>880</x>
-      <y>160</y>
+      <y>286</y>
       <width>60</width>
       <height>22</height>
      </rect>
@@ -931,7 +931,7 @@
     <property name="geometry">
      <rect>
       <x>857</x>
-      <y>164</y>
+      <y>290</y>
       <width>30</width>
       <height>13</height>
      </rect>
@@ -941,6 +941,45 @@
     </property>
     <property name="textInteractionFlags">
      <set>Qt::NoTextInteraction</set>
+    </property>
+   </widget>
+   <widget class="QSlider" name="velocityXSlider">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>125</y>
+      <width>200</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="velocityYSlider">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>172</y>
+      <width>200</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="velocityZSlider">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>222</y>
+      <width>200</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </widget>
@@ -998,6 +1037,9 @@
     <slot>endSizeX()</slot>
     <slot>endSizeY()</slot>
     <slot>setColumnsRows()</slot>
+    <slot>setVelocityXSlider(int)</slot>
+    <slot>setVelocityYSlider(int)</slot>
+    <slot>setVelocityZSlider(int)</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -1354,6 +1396,54 @@
     <hint type="destinationlabel">
      <x>474</x>
      <y>332</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>velocityXSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>maincontainer</receiver>
+   <slot>setVelocityXSlider(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>879</x>
+     <y>168</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>562</x>
+     <y>342</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>velocityYSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>maincontainer</receiver>
+   <slot>setVelocityYSlider(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>879</x>
+     <y>215</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>562</x>
+     <y>342</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>velocityZSlider</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>maincontainer</receiver>
+   <slot>setVelocityZSlider(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>879</x>
+     <y>265</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>562</x>
+     <y>342</y>
     </hint>
    </hints>
   </connection>
