--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -77,9 +77,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>500</y>
+      <y>570</y>
       <width>361</width>
-      <height>91</height>
+      <height>41</height>
      </rect>
     </property>
     <property name="font">
@@ -94,63 +94,11 @@
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
     </property>
    </widget>
-   <widget class="Line" name="line">
-    <property name="geometry">
-     <rect>
-      <x>650</x>
-      <y>10</y>
-      <width>3</width>
-      <height>480</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="line_2">
-    <property name="geometry">
-     <rect>
-      <x>9</x>
-      <y>10</y>
-      <width>3</width>
-      <height>480</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Vertical</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="line_3">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>490</y>
-      <width>640</width>
-      <height>3</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
-   <widget class="Line" name="line_4">
-    <property name="geometry">
-     <rect>
-      <x>9</x>
-      <y>9</y>
-      <width>642</width>
-      <height>3</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
    <widget class="QPushButton" name="browsepath">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>509</y>
+      <x>410</x>
+      <y>552</y>
       <width>91</width>
       <height>25</height>
      </rect>
@@ -226,8 +174,8 @@
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>510</y>
+      <x>510</x>
+      <y>553</y>
       <width>171</width>
       <height>23</height>
      </rect>
@@ -271,8 +219,8 @@
    <widget class="QLabel" name="label_Texture">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>490</y>
+      <x>420</x>
+      <y>533</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -752,8 +700,8 @@
    <widget class="QComboBox" name="textureTypeBox">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>537</y>
+      <x>410</x>
+      <y>580</y>
       <width>91</width>
       <height>24</height>
      </rect>
@@ -781,8 +729,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>537</y>
+      <x>510</x>
+      <y>580</y>
       <width>81</width>
       <height>24</height>
      </rect>
@@ -981,6 +929,44 @@
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
+   </widget>
+   <widget class="QTabWidget" name="tabWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>489</y>
+      <width>641</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="tabPosition">
+     <enum>QTabWidget::South</enum>
+    </property>
+    <property name="tabShape">
+     <enum>QTabWidget::Rounded</enum>
+    </property>
+    <property name="currentIndex">
+     <number>1</number>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>16</width>
+      <height>16</height>
+     </size>
+    </property>
+    <property name="elideMode">
+     <enum>Qt::ElideNone</enum>
+    </property>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Particle System 1</string>
+     </attribute>
+    </widget>
+    <widget class="QWidget" name="tab_2">
+     <attribute name="title">
+      <string>+</string>
+     </attribute>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
