--- a/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
+++ b/TA_ParticleEditor/TA_ParticleEditor/particleeditor.ui
@@ -977,14 +977,17 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QTabWidget" name="tabWidget">
+   <widget class="QTabWidget" name="psTabs">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>489</y>
+      <y>491</y>
       <width>641</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
     </property>
     <property name="tabPosition">
      <enum>QTabWidget::South</enum>
@@ -1005,7 +1008,7 @@
      <enum>Qt::ElideNone</enum>
     </property>
     <property name="tabsClosable">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="movable">
      <bool>false</bool>
@@ -1016,6 +1019,11 @@
     <widget class="QWidget" name="tab">
      <attribute name="title">
       <string>Particle System 1</string>
+     </attribute>
+    </widget>
+    <widget class="QWidget" name="tab_2">
+     <attribute name="title">
+      <string>Add...</string>
      </attribute>
     </widget>
    </widget>
@@ -1059,6 +1067,8 @@
     <slot>setVelocityXSlider(int)</slot>
     <slot>setVelocityYSlider(int)</slot>
     <slot>setVelocityZSlider(int)</slot>
+    <slot>addTab(int)</slot>
+    <slot>removeTab(int)</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -1463,6 +1473,38 @@
     <hint type="destinationlabel">
      <x>562</x>
      <y>342</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>psTabs</sender>
+   <signal>tabBarClicked(int)</signal>
+   <receiver>maincontainer</receiver>
+   <slot>addTab(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>330</x>
+     <y>499</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>491</x>
+     <y>318</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>psTabs</sender>
+   <signal>tabCloseRequested(int)</signal>
+   <receiver>maincontainer</receiver>
+   <slot>removeTab(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>330</x>
+     <y>505</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>491</x>
+     <y>318</y>
     </hint>
    </hints>
   </connection>
